--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,6 +18,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        pip install pyvirtualdisplay
+        pip install selenium
+        pip install seleniumwire
+        pip install mongoengine
+        pip install psutil
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
