--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -14,8 +14,12 @@ jobs:
     - name: Auto tag
       run: |
         git fetch --all --tags
-        latest_tag=$(git describe --tags $(git rev-list --tags --max-count=1))
-        new_tag="v$(echo $latest_tag | awk -F. '{printf "%d.%d", $1, $2+1}')"
+        if git rev-list --tags --max-count=1 > /dev/null 2>&1; then
+            latest_tag=$(git describe --tags $(git rev-list --tags --max-count=1))
+            new_tag="v$(echo $latest_tag | awk -F. '{printf "%d.%d", $1, $2+1}')"
+        else
+            new_tag="v1.0"
+        fi
         
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
