--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -14,6 +14,14 @@ jobs:
     - name: Auto tag
       run: |
         git fetch --all --tags
+        LATEST_COMMIT_HASH=$(git rev-parse HEAD)
+        TAG_ON_LATEST_COMMIT=$(git tag --contains $LATEST_COMMIT_HASH)
+        
+        if [[ ! -z "$TAG_ON_LATEST_COMMIT" ]]; then
+            echo "The latest commit already has a tag: $TAG_ON_LATEST_COMMIT"
+            exit 0
+        fi
+
         LATEST_TAG=$(git describe --tags --always 2>/dev/null)
         
         if [[ $? -ne 0 ]]; then
@@ -27,5 +35,3 @@ jobs:
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git tag $NEW_TAG
         git push origin $NEW_TAG
-
-
